--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,64 @@
+Changes in 1.0.9
+================
+
+ * More detailed commandline output with --verbose enabled
+ * Support for including yaml module snippets
+ * Support the CCACHE_DIR environment variable
+ * New option disable-submodules for git sources
+ * New commandline option --show-manifest
+ * Multiple modules with the same name in the same manifest is
+   now supported.
+
+Changes in 1.0.8
+================
+
+ * Support multiple instances of --install-dep-from
+ * Ensure shallow git mirrors are updated when the git ref changes
+ * Improved error reporting
+
+Changes in 1.0.7
+================
+
+ * Use the new die-with-parent feature of HostCommand when build to run in a flatpak
+ * Fix some details in how we create platform commits to fix font cache mtime issues.
+
+Changes in 1.0.6
+================
+
+ * Pass --noninteractive when installing for flatpak >= 1.2.0
+ * Doc fixes
+
+Changes in 1.0.5
+================
+
+Due to a change in the output of "flatpak info" the support for
+loading default build options from the sdk regressed with flatpak
+1.2.x. This is fixed and everyone who built flatpaks with 1.2.x are
+recommended to update to this release and re-build.
+
+Changes in 1.0.4
+================
+
+ * Add --add/remove-tag options
+ * Allow using a full ref as sdk and use the branch from that.
+
+Changes in 1.0.3
+================
+
+ * Compress changes in cache, fixing the build of large applications like libreoffice in
+   some cases.
+ * Add new default-branch manifest option to allow overridable branch name.
+
+Changes in 1.0.2
+================
+
+ * Print a warning when a YAML document has a float-like string value.
+ * Handle .txz archive suffixes.
+ * Set SOURCE_DATE_EPOCH to the mtime of the manifest in the build.
+ * Update python post-processor to handle python 3.7 pyc files.
+ * Allow unsetting env vars in the build options by setting them to null.
+ * Documentation improvements
+
 Changes in 1.0.1
 ================
 
