--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Changes in 1.0.11
+=================
+
+ * Use brz instead of bzr fom bzr repos (if available)
+ * Fix `run-tests` with --sandbox and empty test-args
+
+Changes in 1.0.10
+=================
+
+ * Support for 7zip archives
+ * Allow overriding archive type
+ * Support --token-type option
+
 Changes in 1.0.9
 ================
 
