flatpak-builder: Autospec creation for update from version 1.0.11 to version 1.0.12
Alexander Larsson (1):
      Bump version/NEWS for 1.0.12 release

Sam Thursfield (1):
      Ignore the `--metadata` argument of flatpak build-finish

gasinvein (1):
      Don't extract git submodules if not mirrored

louib (1):
      Normalize rofiles-fuse related logs.

Changes in 1.0.12
=================

 * Make --run work if manifest has --metadata in build-finish
 * Don't try to extract git submodules if they were disabled

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in 1.0.12
+=================
+
+ * Make --run work if manifest has --metadata in build-finish
+ * Don't try to extract git submodules if they were disabled
+
 Changes in 1.0.11
 =================
 
