flatpak-builder: Autospec creation for update from version 1.0.14 to version 1.2.0
Alexander Larsson (9):
      Bump version and update NEWS for new unstable 1.1.1 release
      configure.in: Drop checks for dwarf.h
      Makefile: Add missing source files when building debugedit
      tests: Set FLATPAK_BUILDER_DEBUGEDIT if needed in the test build env
      tests: Dist source[12].json
      .gitmodule Rename debugedit module to not have slashes in name
      Bump version to 1.1.2 and update NEWS
      Update NEWS for release
      Bump version to 1.2.0

Debarshi Ray (1):
      utils: Remove unused header

Patrick Griffis (1):
      Re-enable HTTP compression

Ryan Gonzalez (4):
      source-patch: Fix (null) values in errors when "paths" is used
      Ensure sequential source manifest paths are resolved correctly
      Update GitHub Actions to Ubuntu 20.04
      Use debugedit to parse debug info for DWARF 5 support

Will Thompson (2):
      Remove stray verb
      post-process: Add missing newlines to Python cleanup

gasinvein (3):
      Make "no / in filename" error to more helpful
      Add inline data source
      source-inline: Check if creating file failed

tytan652 (3):
      manifest: Add 'secret-opts' option
      Log commandline with unresolved args if secrets
      manifest: Add 'secret-env' option

This is the first unstable relase in preparation for 1.2.0

 * We now use the external debugedit project instead of using an internal copy.
   The system version can be used, or if not an internal version is used
   built using git submodules.
   Note, this needs libdw 0.172, which may not be available on older distributions.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,27 @@
+Changes in 1.2.0
+================
+ * Documentation updates
+ * Add missing newlines in some output
+ * Fix missing error check in the new inline data support
+
+Changes in 1.1.2
+================
+
+ * New secret-opts feature lets you pass e.g. CI secrets into the build.
+ * Support content-encoding when downloading.
+ * New inline data source allowing easy creation of files from embedded content from
+   the manifest.
+
+Changes in 1.1.1
+================
+
+This is the first unstable relase in preparation for 1.2.0
+
+ * We now use the external debugedit project instead of using an internal copy.
+   The system version can be used, or if not an internal version is used
+   built using git submodules.
+   Note, this needs libdw 0.172, which may not be available on older distributions.
+
 Changes in 1.0.14
 =================
 
