flatpak-builder: Autospec creation for update from version 1.2.2 to version 1.2.3
Nelson Benitez Leon (1):
      Automatically detect default branch name instead of harcoding 'master' (#455)

Patrick Griffis (2):
      doc: Document git default branch behavior
      Bump version to 1.2.3

Phaedrus Leeds (1):
      Fix a typo in a terminal title

Weng Xuetian (1):
      Allow use file protocol when update submodule.

gasinvein (1):
      json-schema: Handle have-kernel-module- condition

Changes in 1.2.3
================

This is a minor bug-fix release that fixes cloning `file://` URIs with
git 2.38.1 or newer.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in 1.2.3
+================
+
+This is a minor bug-fix release that fixes cloning `file://` URIs with
+git 2.38.1 or newer.
+
 Changes in 1.2.2
 ================
 
